# question-answering-with-deep-learning

./: README.md  pyproject.toml
notebooks/data_extraction/: data_extraction.ipynb
notebooks/data_extraction/output_data/: paragraphs.csv
