[tool.poetry]
name = "question-answering-using-deep-learning"
version = "0.1.0"
description = "Application for question answering based on PDF data"
authors = ["Gaurav Kumar <gauravtanwar03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textract = "^1.6.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
